turmites.lessons.turmites.langton.Langton.scala.error
LangtonsAnt:0: error: ':' expected but ')' found.
class LangtonsAnt extends SimpleBuggle {def setCouleurSol(couleur) {
                                                                 ^LangtonsAnt:27: error: identifier expected but '}' found.
}
^